// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Search - Mobile Snapshots > matches snapshot on mobile viewport 1`] = `
<div>
  <div
    class="lg:hidden"
    data-testid="container"
  >
    <div
      data-auto-focus="true"
      data-testid="search-input"
    >
      SearchInput
    </div>
  </div>
  <div
    class="flex w-full flex-col gap-4"
    data-testid="container"
  >
    <div
      data-testid="search-people"
    >
      SearchPeople
    </div>
    <div
      data-testid="search-collections"
    >
      SearchCollections
    </div>
    <div
      class="flex w-full flex-col gap-4"
      data-testid="container"
    >
      <h2
        class="text-2xl font-light text-muted-foreground"
        data-testid="heading-2"
      >
        Posts
      </h2>
      <div
        data-cy="post-search-results"
        data-testid="container"
      >
        <div
          data-testid="timeline-feed"
          data-variant="search"
        >
          TimelineFeed
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search - Snapshots > matches snapshot with no tags 1`] = `
<div>
  <div
    class="lg:hidden"
    data-testid="container"
  >
    <div
      data-auto-focus="true"
      data-testid="search-input"
    >
      SearchInput
    </div>
  </div>
  <div
    data-testid="search-empty-state"
  >
    SearchEmptyState
  </div>
</div>
`;

exports[`Search - Snapshots > matches snapshot with tags present 1`] = `
<div>
  <div
    class="lg:hidden"
    data-testid="container"
  >
    <div
      data-auto-focus="false"
      data-testid="search-input"
    >
      SearchInput
    </div>
  </div>
  <div
    class="flex w-full flex-col gap-4"
    data-testid="container"
  >
    <div
      data-testid="search-people"
    >
      SearchPeople
    </div>
    <div
      data-testid="search-collections"
    >
      SearchCollections
    </div>
    <div
      class="flex w-full flex-col gap-4"
      data-testid="container"
    >
      <h2
        class="text-2xl font-light text-muted-foreground"
        data-testid="heading-2"
      >
        Posts
      </h2>
      <div
        data-cy="post-search-results"
        data-testid="container"
      >
        <div
          data-testid="timeline-feed"
          data-variant="search"
        >
          TimelineFeed
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Search - Snapshots > matches snapshot with tags present and a non-All content filter 1`] = `
<div>
  <div
    class="lg:hidden"
    data-testid="container"
  >
    <div
      data-auto-focus="false"
      data-testid="search-input"
    >
      SearchInput
    </div>
  </div>
  <div
    data-cy="post-search-results"
    data-testid="container"
  >
    <div
      data-testid="timeline-feed"
      data-variant="search"
    >
      TimelineFeed
    </div>
  </div>
</div>
`;
